samples/_failures_safe/1761487162_672bd3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_36f9dc28.c: In function ‘main’:
./samples/SAFE/__tmp_36f9dc28.c:139:9: error: expected expression at end of input
  139 |         buffer_free(&
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_36f9dc28.c:139:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_36f9dc28.c:139:9: error: expected declaration or statement at end of input
